# labour-codes-tool

./: .dockerignore  .env  .env.example  .env.local  .eslintrc.json  .gitignore  Dockerfile  PROJECT_STATE.json  PROJECT_STATE.md  SECURITY.md  alembic.ini  migrate-legal-os.js  migration_delta.sql  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyrightconfig.json  railway.json  requirements.txt  start.sh  supervisord.conf  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  update-roles.ts  vite.config.ts  vitest.config.ts
.agent/workflows/: push-to-dev.md
.github/workflows/: ci.yml  sync-dev.yml
.jules/: bolt.md  sentinel.md
api/: config.py  database.py  main.py
backend/: alembic.ini  database.py  main.py  models.py  requirements.txt  schemas.py
backend/api/: documents.py  metadata.py  search.py  structure.py
backend/migrations/: env.py
backend_engine/: .coverage  .env  .env.example  .gitignore  Dockerfile  Procfile  nixpacks.toml  pyproject.toml  requirements.txt  schema.prisma
backend_engine/src/: audit_chain.py  celery_app.py  classifier.py  cross_linker.py  database.py  graph_service.py  limiter.py  main.py  models.py  parser.py  pipeline_task.py  propagator.py  redis_client.py  settings.py  tasks.py
backend_engine/src/enrichment/: __init__.py  orchestrator.py  pass1_structure.py  pass2_definitions.py  pass3_compliance.py  pass4_xrefs.py  pass5_applicability.py  pass6_authority.py
backend_engine/src/graph/: __init__.py  builder.py  connection.py  queries.py
backend_engine/src/routers/: audit_router.py  document_router.py  pipeline_router.py  suggestion_router.py
backend_engine/tests/: conftest.py  test_audit_chain.py  test_database.py  test_graph_service.py  test_main.py  test_models.py  test_parser.py  test_settings.py
coverage/: clover.xml  coverage-final.json  index.html
coverage/context/: AppContext.tsx.html  UIContext.tsx.html  index.html
coverage/lib/: audit.ts.html  index.html  logger.ts.html  pdfService.ts.html  utils.ts.html
db/: schema_diagram.mermaid
db/migrations/: env.py
db/models/: __init__.py  amendment_history.py  applicability_condition.py  authority.py  authority_provision_link.py  base.py  compliance_obligation.py  conditions_precedent_consequent.py  cross_reference.py  definition.py  delegation_of_power.py  document.py  fee_schedule.py  form_template.py  judicial_interpretation.py  notification_circular.py  point_in_time_snapshot.py  rate_slab_schedule.py  repeal_mapping.py  rights_and_remedies.py  stamp_duty_schedule.py  structural_unit.py  transaction_provision_link.py  transaction_type.py
db/seeds/: seed_companies_act.py
frontend/: next.config.mjs  package-lock.json  package.json
prisma/: schema.backup.prisma  schema.prisma  seed.ts
scripts/: db-check.ts  ingest_json.py  seed_legal_updates.ts
src/: App.test.ts  App.tsx  index.css  middleware.ts  utils.ts
src/app/: globals.css  layout.tsx  page.tsx
tests/: conftest.py
(+245 files in other folders)
