[tool.poetry]
name = "backend-engine"
version = "0.1.0"
description = "Python backend engine for vectorless RAG parsing"
authors = ["AI <ai@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.8.0"
pydantic-settings = "^2.3.4"
loguru = "^0.7.2"
python-multipart = "^0.0.9"
PyMuPDF = "^1.24.5"
openai = "^1.35.0"
prisma = "^0.13.1"
redis = "^5.0.7"
neo4j = "^5.21.0"
google-genai = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
mypy = "^1.10.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
