[tool.poetry]
name = "backend-engine"
version = "0.1.0"
description = "Python backend engine for vectorless RAG parsing"
authors = ["AI <ai@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.8.0"
pydantic-settings = "^2.3.4"
loguru = "^0.7.2"
python-multipart = "^0.0.9"
PyMuPDF = "^1.24.5"
openai = "^1.35.0"
prisma = "^0.15.0"
redis = "^5.0.7"
celery = "^5.4.0"
neo4j = "^5.21.0"
google-genai = "^0.5.0"
slowapi = "^0.1.9"
json-repair = ">=0.30.0"
pandas = "^2.2.2"
python-docx = "^1.1.2"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^1.3.0"
mypy = "^1.10.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.10.0",
    "pip-audit>=2.10.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.5.0",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
